<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="title_activity_auto_config">Автоконфигурация</string>
	<string name="settings">Настройки</string>
	<string name="action_dates">Даты</string>
	<string name="auto_config_for">Приложение настроено на подключение к </string>
	<string name="title_activity_no_connection_to_application_server">Рабочий стол</string>
	<string name="progress_dialog_loading_message">Загрузка…</string>
	<string name="new_version_downloading">Загрузка новой версии…</string>
	<string name="password_change_processing">Изменение пароля…</string>
	<string name="action_search">Поиск</string>
	<string name="search_hint">Поиск…</string>
	<string name="general">Общее</string>
	<string name="exit">Выход</string>
	<string name="app_version">Версия приложения</string>
	<string name="app_language">Язык приложения</string>
	<string name="get_link_from_qr">Получить ссылку из QR-кода</string>
	<string name="web_service_address">Адрес веб-сервиса</string>
	<string name="yesterday">Вчера</string>
	<string name="tomorrow">Завтра</string>
	<string name="time_picker">Укажите время</string>
	<string name="date_picker">Укажите дату</string>
	<string name="loading_attachment">Загрузка вложения</string>
	<string name="loading_attachments">Загрузка списка вложений</string>
	<string name="adding_attachment">Добавление вложения</string>
	<string name="deleting_attachment">Удаление вложения</string>
	<string name="cant_open_file">Не удалось открыть файл</string>
	<string name="cant_add_file">Не удалось добавить файл</string>
	<string name="cant_delete_file">Не удалось удалить файл</string>
	<string name="file_upload">Выгрузка файла</string>
	<string name="file_upload_error">Ошибка при выгрузке файла</string>
	<string name="authentication_failed">Вход не выполнен</string>
	<string name="no_connection">Подключение отсутствует</string>
	<string name="no_connection_to_application_server">Не удалось подключиться к серверу приложений</string>
	<string name="wrong_login_password">Неверное имя пользователя или пароль</string>
	<string name="cant_authenticate">Невозможно выполнить вход</string>
	<string name="need_connection">Для запуска необходимо подключение</string>
	<string name="no_license_message">Нет доступных лицензий. Повторите попытку позже.</string>
	<string name="execute_exception">Произошла исключительная ситуация при выполнении расчета</string>
	<string name="access_exception">Нет доступа для выполнения расчета</string>
	<string name="http_exception_vpn_message">Для использования данного приложения Вы должны быть подключены к Интернету и VPN-сети</string>
	<string name="calculation_not_exists">Расчет не доступен</string>
	<string name="exception">Исключительная ситуация</string>
	<string name="open_vpn">VPN</string>
	<string name="no_connection_with_server">Нет соединения с сервером приложений</string>
	<string name="retry">Повторить</string>
	<string name="version_error">Не совпадают версии мобильного клиента и сервера IT-Enterprise</string>
	<string name="cannot_login_with_google_title">Не удалось выполнить вход</string>
	<string name="cannot_login_with_google_message">Не удалось выполнить вход используя учетные данные Google. Используйте учетные данные IT-Enterprise</string>
	<string name="cant_receive_attachment">Не удалось получить вложение</string>
	<string name="no_permissions_for_attachment">Нет прав для просмотра вложения</string>
	<string name="version_check">Проверка версии</string>
	<string name="exception_possible_reasons">Возможные причины:\n
- осуществляется попытка подключения к более старой версии сервера приложений\n
- некорректно настроена ссылка для доступа к серверу приложений;\n
- произошла исключительная ситуация при выполнении расчета на сервере приложений.</string>
	<string name="object_error">Приложение можно запускать только на объекте \"%s\"</string>
	<string name="module_error">Отсутствует модуль \"%s\"</string>
	<string name="use_new_version">Используйте новую версию приложения</string>
	<string name="install_from_store">Установите новую версию приложения из Play Market. После установки запустите это приложение еще раз для автоматической настройки новой версии.</string>
	<string name="navigation_drawer_open">Открыть выезжающее меню</string>
	<string name="navigation_drawer_close">Закрыть выезжающее меню</string>
	<string name="cancel">Отменить</string>
	<string name="save">Сохранить</string>
	<string name="choose_action">Выберите действие</string>
	<string name="make_call">Позвонить</string>
	<string name="write_email">Написать email</string>
	<string name="loading_user_params">Загрузка данных пользователя…</string>
	<string name="offline_mode">Режим offline</string>
	<string name="old_password">Старый пароль</string>
	<string name="new_password">Новый пароль</string>
	<string name="confirmation">Подтверждение</string>
	<string name="change">Изменить</string>
	<string name="cant_change_password">Невозможно изменить пароль</string>
	<string name="passwords_do_not_match">Пароли не совпадают</string>
	<string name="password_change_failed">Смена пароля не выполнена</string>
	<string name="password_changed">Пароль изменен</string>
	<string name="change_password">Смена пароля</string>
	<string name="ok" translatable="false">OK</string>
	<string name="crash_toast_text">Аварийное завершение приложения. Отчет об ошибке отправлен разработчикам.</string>
	<string name="web_service_addresses">Адреса веб-сервисов</string>
	<string name="add_address">Добавить адрес</string>
	<string name="edit_address">Редактировать адрес</string>
	<string name="remove_address">Удалить адрес</string>
	<string name="new_address">Новый адрес</string>
	<string name="address_editing">Редактирование адреса</string>
	<string name="address_removing">Удаление адреса</string>
	<string name="remove_string">Удалить \"%s\"?</string>
	<string name="address_already_at_list">Указанный адрес уже в списке.</string>
	<string name="cant_add_empty_address">Невозможно задать пустой адрес веб-сервиса.</string>
	<string name="yes">Да</string>
	<string name="no">Нет</string>
	<string name="address">Адрес</string>
	<string name="port">Порт</string>
	<string name="title">Название</string>
	<string name="default_">По умолчанию</string>
	<string name="web_services_url_validation">Проверка корректности адреса веб-сервисов…</string>
	<string name="scanned_link_not_correct">Отсканированная ссылка не корректна</string>
	<string name="incorrect_link">Некорректная ссылка</string>
	<string name="path_to_private_key_not_specified_or_invalid">Путь к файлу приватного ключа неверный или не задан</string>
	<string name="private_key_password_not_specified">Не указан пароль приватного ключа</string>
	<string name="invalid_path_to_file_you_wont_sign">Неверный путь к файлу, который надо подписать</string>
	<string name="signing_file_failed">Не удалось подписать файл</string>
	<string name="remember">Запомнить</string>
	<string name="enter_password_of_private_key">Укажите пароль приватного ключа</string>
	<string name="you_must_set_password">Необходимо задать пароль</string>
	<string name="eds_creating">Создание ЭЦП</string>
	<string name="eds_verifying">Проверка ЭЦП</string>
	<string name="eds_creating_fail">Ошибка при создании ЭЦП</string>
	<string name="prompt_login">Логин</string>
	<string name="prompt_password">Пароль</string>
	<string name="init_eds_library_error">Ошибка при инициализации библиотеки</string>
	<string name="sign_attachment_question">Подписать вложение?</string>
	<string name="check_operatively">Проверять оперативно</string>
	<string name="cant_find_app_to_open_file">Не удалось найти приложение для открытия файла</string>
	<string name="use_rights">Использовать права</string>
	<string name="use_rights_colon">Использовать права:</string>
	<string name="loading_delegated_users">Загрузка пользователей</string>
	<string name="changing_delegated_user">Переключение пользователя</string>
	<string name="cant_change_delegated_user">Не удалось переключить пользователя</string>
	<string name="no_employees">Нет сотрудников.</string>
	<string name="no_rights_from_delegated_employees">Вам не делегированы права от других сотрудников</string>


</resources>