<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.it.core.activity.ChangePasswordActivity" >

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout
			style="@style/LoginFormContainer"
			android:orientation="vertical" >

			<ImageView
				android:layout_width="150dp"
				android:layout_height="150dp"
				android:layout_marginBottom="15dp"
				android:layout_gravity="center_horizontal"
				android:src="@drawable/logo_icon_300"
				android:contentDescription="Logo" />

			<!--android:src="@drawable/logo_icon_144"-->

			<EditText
				android:id="@+id/activity_change_password_old_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/old_password"
				android:imeOptions="actionNext"
				android:inputType="textPassword"
				android:singleLine="true"
				android:textSize="18dp" />

			<EditText
				android:id="@+id/activity_change_password_new_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/new_password"
				android:imeOptions="actionNext"
				android:inputType="textPassword"
				android:singleLine="true"
				android:textSize="18dp" />

			<EditText
				android:id="@+id/activity_change_password_new_password_repeat"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/confirmation"
				android:imeActionLabel="@string/change"
				android:imeOptions="actionDone"
				android:inputType="textPassword"
				android:singleLine="true"
				android:textSize="18dp" />

			<Button
				android:id="@+id/activity_change_password_change_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="16dp"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:background="@drawable/round_corner_button"
				android:textColor="#ffffff"
				android:text="@string/change"
				android:textSize="18dp" />
		</LinearLayout>
	</ScrollView>
</merge>